# igcl-rs

./: .gitmodules  Cargo.toml  README.md  release.toml
.github/workflows/: ci.yml
api_gen/: Cargo.toml  wrapper.h
api_gen/src/: main.rs
examples/: devices.rs
src/: device_adapter.rs  error.rs  ffi.rs  helper.rs  lib.rs  memory.rs
